[package]
name = "smolrwkv-cli"
version = { workspace = true }
edition = "2021"
resolver = "2"

[features]
default = ["ggml", "torch"]
ggml = ["smolrwkv/ggml"]
torch = ["smolrwkv/torch"]

[dependencies]
mmap-rs = "0.5"
anyhow = "1"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.7"
tokenizers = { version = "0.13", default-features = false, features = ["onig"] }
rand = "0.8"
clap = { version = "4.2", features=["derive", "cargo"]}
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing = "0.1"
memmap2 = "0.5"
# tracing-flame = "0.2"

smolrwkv = { path = "../smolrwkv" }
