[package]
name = "smolrwkv-cli"
version = { workspace = true }
edition = "2021"
resolver = "2"

[features]
default = ["ggml", "torch"]
ggml = ["smolrwkv/ggml"]
torch = ["smolrwkv/torch"]

[dependencies]
anyhow = "1"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.7"
tokenizers = { version = "0.13", default-features = false, features = ["onig"] }
rand = "0.8"
clap = { version = "4.2", features=["derive", "cargo"]}
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing = "0.1"
memmap2 = "0.7"
# tracing-flame = "0.2"

smolrwkv = { path = "../smolrwkv" }

[dependencies.llm-samplers]
version = "=0.0.6"
#path = "../../llm-samplers"
# git = "https://github.com/KerfuffleV2/llm-samplers"
# tag = "v0.0.4"
