[package]
name = "smolrwkv"
authors = ["KerfuffleV2@github"]
version = { workspace = true }
edition = "2021"
resolver = "2"

[features]
default = ["torch", "simd"]
torch = ["dep:repugnant-pickle"]
simd = ["dep:simba"]

[dependencies]
safetensors = { version = "0.3", default-features = false }
tokenizers = { version = "0.13", default-features = false, features = ["onig"] }
anyhow = "1"
mmap-rs = "0.5"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.7"
half = "2.2"
rand = "0.8"
num-traits = "0.2"
tracing = "0.1"
simba = { version = "0.8", features = ["wide"], optional = true }

[dependencies.repugnant-pickle]
git = "https://github.com/kerfufflev2/repugnant-pickle"
tag = "v0.0.1"
features = ["torch"]
optional = true

[dependencies.ggml]
path = "../../llama-rs/ggml"
