[package]
name = "smolrwkv"
authors = ["KerfuffleV2@github"]
version = { workspace = true }
edition = "2021"
resolver = "2"

[features]
default = ["torch", "ggml"]
torch = ["dep:repugnant-pickle"]
simd = ["dep:simba"]
ggml = ["dep:ggml", "dep:ggml-sys"]

[dependencies]
safetensors = { version = "0.3", default-features = false }
tokenizers = { version = "0.13", default-features = false, features = ["onig"] }
anyhow = "1"
memmap2 = "0.5"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.7"
half = "2.2"
rand = "0.8"
num-traits = "0.2"
tracing = "0.1"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
simba = { version = "0.8", features = ["wide"], optional = true }

[dependencies.repugnant-pickle]
git = "https://github.com/kerfufflev2/repugnant-pickle"
tag = "v0.0.1"
features = ["torch"]
optional = true

[dependencies.ggml]
optional = true
git = "https://github.com/rustformers/llama-rs"
rev = "84656bedce38a6be8070e13506cb6c6245e7ef75"

[dependencies.ggml-sys]
optional = true
git = "https://github.com/rustformers/llama-rs"
rev = "84656bedce38a6be8070e13506cb6c6245e7ef75"
